deployment_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nextgis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-container
        image: registry.gitlab.com/nextgis/ngwdocker/ext-wl/postgres:2.4.1
        ports:             
        - containerPort: 5432
