service-nodeport_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: nextgis
spec:
  type: NodePort
  selector:
    name: ingress-ngw-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30100
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30101
