svc-ngw.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextgis
  name: app-svc
spec:
  type: NodePort
  selector: 
    app: ngw-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
