svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextgis
  name: postgres
spec:
  selector: 
    app: postgres-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
